2011-07-20 Riccardo Mottola <rm@gnu.org>

	* SudokuView.m
	Converted to NBezierPath drawing

	* KnobView.h
	* KnobView.m
	* GNUmakefile
	* Controller.m
	Use standard progress indicator.

	* Controller.m
	Buffered and not Retained windows.

	* Document.m
	* Sudoku.m
	* main.m
	Removed gnustep specific memory macros
	
2011-07-12 Riccardo Mottola <rm@gnu.org>

	* Controller.m
	* main.m
	Windows port

2011-06-20 Riccardo Mottola <rm@gnu.org>

	* SudokuView.m
	* Sudoku.m
	* main.m
	C89 fixes and code cleanup

2011-06-16 Riccardo Mottola <rm@gnu.org>

	* Controller.m
	Fix new game.

	* Controller.m
	Code cleanup.

2011-06-15 Riccardo Mottola <rm@gnu.org>

	* Document.m
	Fix warning and reorganize code.

	* Controller.m
	* DigitSource.m
	* Document.m
	* SudokuView.m
	C99 fixes and code tidy up.

2011-06-07 Riccardo Mottola <rm@gnu.org>

	* Controller.h
	* DigitSource.h
	* Document.h
	* Document.m
	* KnobView.h
	* KnobView.m
	* Sudoku.h
	* SudokuView.h
	* SudokuView.m
	Organized imports better.

2011-06-07 Riccardo Mottola <rm@gnu.org>

	* Controller.h
	* Controller.m
	* DigitSource.h
	* DigitSource.m
	* Document.h
	* Document.m
	* KnobView.h
	* KnobView.m
	* Sudoku.h
	* Sudoku.m
	* SudokuInfo.plist
	* SudokuView.h
	* SudokuView.m
	* main.m
	* Sudoku.pcproj/PC.project
	Put boiler plate on each file.

2011-06-07 Riccardo Mottola <rm@gnu.org>

	* Controller.m
	include instead of import system header.

2011-06-06 Riccardo Mottola <rm@gnu.org>

	* Resources/Sudoku.tiff
	Adjusted resolution.

	Imported.
	Icons renamed to Resources